--- a/app/src/main/res/layout/details_item.xml
+++ b/app/src/main/res/layout/details_item.xml
@@ -159,7 +159,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="13dp"
                     android:layout_marginEnd="18dp"
-                    android:fontFamily="@font/lato"
+                    android:fontFamily="@font/gilroylight"
                     android:text=""
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="@+id/details"
@@ -186,7 +186,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/quantity_text"
-
+                    android:fontFamily="@font/gilroylight"
                     android:layout_marginStart="41dp"
                     android:layout_marginTop="1dp"
                     android:layout_toEndOf="@+id/quantity_text"
@@ -217,7 +217,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignStart="@+id/quantity"
                     android:layout_alignTop="@+id/category_text"
-
+                    android:fontFamily="@font/gilroylight"
                     android:layout_marginStart="0dp"
                     android:layout_marginTop="1dp"
                     android:text="Computer"
@@ -254,6 +254,7 @@
                     android:layout_marginStart="0dp"
                     android:layout_marginTop="1dp"
                     android:text="Sabah"
+                    android:fontFamily="@font/gilroylight"
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -271,7 +272,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginEnd="0dp"
                     android:layout_marginBottom="10dp"
-                    android:fontFamily="@font/lato"
+                    android:fontFamily="@font/gilroylight"
                     android:text="asdsadsad"
                     android:textColor="@color/darkGrey"
                     android:textSize="10sp"
