--- a/app/src/main/res/layout/activity_profile_setting.xml
+++ b/app/src/main/res/layout/activity_profile_setting.xml
@@ -83,6 +83,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:inputType="textEmailAddress"
+                            android:fontFamily="@font/gilroylight"
                             android:textColor="@color/darkGrey" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,6 +105,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:inputType="textEmailAddress"
+                            android:fontFamily="@font/gilroylight"
                             android:textColor="@color/darkGrey" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -124,6 +126,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:inputType="textEmailAddress"
+                            android:fontFamily="@font/gilroylight"
                             android:textColor="@color/darkGrey" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -145,6 +148,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:inputType="textEmailAddress"
+                            android:fontFamily="@font/gilroylight"
                             android:textColor="@color/darkGrey" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -165,7 +169,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:inputType="textEmailAddress"
-                            android:textColor="@color/darkGrey" />
+                            android:textColor="@color/darkGrey"
+                            android:fontFamily="@font/gilroylight"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
 
