--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -89,6 +89,7 @@
                         android:inputType="textEmailAddress"
                         android:paddingStart="10dp"
                         android:textColor="@color/dark"
+                        android:fontFamily="@font/gilroylight"
                         android:textColorHint="@color/yellow_musterd"
 
                         />
